@@ -1552,6 +1552,7 @@ ____CORE_SRC_FILENAMES_OBJECTS =  \
 	$(OBJS)\monodll_metafile.obj \
 	$(OBJS)\monodll_msgdlg.obj \
 	$(OBJS)\monodll_nativdlg.obj \
+	$(OBJS)\monodll_nativewin.obj \
 	$(OBJS)\monodll_notebook.obj \
 	$(OBJS)\monodll_access.obj \
 	$(OBJS)\monodll_ownerdrw.obj \
@@ -2195,6 +2196,7 @@ ____CORE_SRC_FILENAMES_1_OBJECTS =  \
 	$(OBJS)\monolib_metafile.obj \
 	$(OBJS)\monolib_msgdlg.obj \
 	$(OBJS)\monolib_nativdlg.obj \
+	$(OBJS)\monolib_nativewin.obj \
 	$(OBJS)\monolib_notebook.obj \
 	$(OBJS)\monolib_access.obj \
 	$(OBJS)\monolib_ownerdrw.obj \
@@ -2753,6 +2755,7 @@ ____CORE_SRC_FILENAMES_2_OBJECTS =  \
 	$(OBJS)\coredll_metafile.obj \
 	$(OBJS)\coredll_msgdlg.obj \
 	$(OBJS)\coredll_nativdlg.obj \
+	$(OBJS)\coredll_nativewin.obj \
 	$(OBJS)\coredll_notebook.obj \
 	$(OBJS)\coredll_access.obj \
 	$(OBJS)\coredll_ownerdrw.obj \
@@ -3217,6 +3220,7 @@ ____CORE_SRC_FILENAMES_3_OBJECTS =  \
 	$(OBJS)\corelib_metafile.obj \
 	$(OBJS)\corelib_msgdlg.obj \
 	$(OBJS)\corelib_nativdlg.obj \
+	$(OBJS)\corelib_nativewin.obj \
 	$(OBJS)\corelib_notebook.obj \
 	$(OBJS)\corelib_access.obj \
 	$(OBJS)\corelib_ownerdrw.obj \
@@ -5559,6 +5563,9 @@ $(OBJS)\monodll_msgdlg.obj: ..\..\src\msw\msgdlg.cpp
 $(OBJS)\monodll_nativdlg.obj: ..\..\src\msw\nativdlg.cpp
 	$(CXX) -q -c -P -o$@ $(MONODLL_CXXFLAGS) ..\..\src\msw\nativdlg.cpp
 
+$(OBJS)\monodll_nativewin.obj: ..\..\src\msw\nativewin.cpp
+	$(CXX) -q -c -P -o$@ $(MONODLL_CXXFLAGS) ..\..\src\msw\nativewin.cpp
+
 $(OBJS)\monodll_access.obj: ..\..\src\msw\ole\access.cpp
 	$(CXX) -q -c -P -o$@ $(MONODLL_CXXFLAGS) ..\..\src\msw\ole\access.cpp
 
@@ -7664,6 +7671,9 @@ $(OBJS)\monolib_msgdlg.obj: ..\..\src\msw\msgdlg.cpp
 
 $(OBJS)\monolib_nativdlg.obj: ..\..\src\msw\nativdlg.cpp
 	$(CXX) -q -c -P -o$@ $(MONOLIB_CXXFLAGS) ..\..\src\msw\nativdlg.cpp
+
+$(OBJS)\monolib_nativewin.obj: ..\..\src\msw\nativewin.cpp
+	$(CXX) -q -c -P -o$@ $(MONOLIB_CXXFLAGS) ..\..\src\msw\nativewin.cpp
 
 $(OBJS)\monolib_access.obj: ..\..\src\msw\ole\access.cpp
 	$(CXX) -q -c -P -o$@ $(MONOLIB_CXXFLAGS) ..\..\src\msw\ole\access.cpp
@@ -10155,6 +10165,9 @@ $(OBJS)\coredll_msgdlg.obj: ..\..\src\msw\msgdlg.cpp
 $(OBJS)\coredll_nativdlg.obj: ..\..\src\msw\nativdlg.cpp
 	$(CXX) -q -c -P -o$@ $(COREDLL_CXXFLAGS) ..\..\src\msw\nativdlg.cpp
 
+$(OBJS)\coredll_nativewin.obj: ..\..\src\msw\nativewin.cpp
+	$(CXX) -q -c -P -o$@ $(COREDLL_CXXFLAGS) ..\..\src\msw\nativewin.cpp
+
 $(OBJS)\coredll_access.obj: ..\..\src\msw\ole\access.cpp
 	$(CXX) -q -c -P -o$@ $(COREDLL_CXXFLAGS) ..\..\src\msw\ole\access.cpp
 
@@ -11465,6 +11478,9 @@ $(OBJS)\corelib_msgdlg.obj: ..\..\src\msw\msgdlg.cpp
 
 $(OBJS)\corelib_nativdlg.obj: ..\..\src\msw\nativdlg.cpp
 	$(CXX) -q -c -P -o$@ $(CORELIB_CXXFLAGS) ..\..\src\msw\nativdlg.cpp
+
+$(OBJS)\corelib_nativewin.obj: ..\..\src\msw\nativewin.cpp
+	$(CXX) -q -c -P -o$@ $(CORELIB_CXXFLAGS) ..\..\src\msw\nativewin.cpp
 
 $(OBJS)\corelib_access.obj: ..\..\src\msw\ole\access.cpp
 	$(CXX) -q -c -P -o$@ $(CORELIB_CXXFLAGS) ..\..\src\msw\ole\access.cpp
