@@ -1569,6 +1569,7 @@ ____CORE_SRC_FILENAMES_OBJECTS =  \
 	$(OBJS)\monodll_metafile.o \
 	$(OBJS)\monodll_msgdlg.o \
 	$(OBJS)\monodll_nativdlg.o \
+	$(OBJS)\monodll_nativewin.o \
 	$(OBJS)\monodll_notebook.o \
 	$(OBJS)\monodll_access.o \
 	$(OBJS)\monodll_ownerdrw.o \
@@ -2218,6 +2219,7 @@ ____CORE_SRC_FILENAMES_1_OBJECTS =  \
 	$(OBJS)\monolib_metafile.o \
 	$(OBJS)\monolib_msgdlg.o \
 	$(OBJS)\monolib_nativdlg.o \
+	$(OBJS)\monolib_nativewin.o \
 	$(OBJS)\monolib_notebook.o \
 	$(OBJS)\monolib_access.o \
 	$(OBJS)\monolib_ownerdrw.o \
@@ -2792,6 +2794,7 @@ ____CORE_SRC_FILENAMES_2_OBJECTS =  \
 	$(OBJS)\coredll_metafile.o \
 	$(OBJS)\coredll_msgdlg.o \
 	$(OBJS)\coredll_nativdlg.o \
+	$(OBJS)\coredll_nativewin.o \
 	$(OBJS)\coredll_notebook.o \
 	$(OBJS)\coredll_access.o \
 	$(OBJS)\coredll_ownerdrw.o \
@@ -3264,6 +3267,7 @@ ____CORE_SRC_FILENAMES_3_OBJECTS =  \
 	$(OBJS)\corelib_metafile.o \
 	$(OBJS)\corelib_msgdlg.o \
 	$(OBJS)\corelib_nativdlg.o \
+	$(OBJS)\corelib_nativewin.o \
 	$(OBJS)\corelib_notebook.o \
 	$(OBJS)\corelib_access.o \
 	$(OBJS)\corelib_ownerdrw.o \
@@ -5701,6 +5705,9 @@ $(OBJS)\monodll_msgdlg.o: ../../src/msw/msgdlg.cpp
 $(OBJS)\monodll_nativdlg.o: ../../src/msw/nativdlg.cpp
 	$(CXX) -c -o $@ $(MONODLL_CXXFLAGS) $(CPPDEPS) $<
 
+$(OBJS)\monodll_nativewin.o: ../../src/msw/nativewin.cpp
+	$(CXX) -c -o $@ $(MONODLL_CXXFLAGS) $(CPPDEPS) $<
+
 $(OBJS)\monodll_access.o: ../../src/msw/ole/access.cpp
 	$(CXX) -c -o $@ $(MONODLL_CXXFLAGS) $(CPPDEPS) $<
 
@@ -7907,6 +7914,9 @@ $(OBJS)\monolib_msgdlg.o: ../../src/msw/msgdlg.cpp
 	$(CXX) -c -o $@ $(MONOLIB_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\monolib_nativdlg.o: ../../src/msw/nativdlg.cpp
+	$(CXX) -c -o $@ $(MONOLIB_CXXFLAGS) $(CPPDEPS) $<
+
+$(OBJS)\monolib_nativewin.o: ../../src/msw/nativewin.cpp
 	$(CXX) -c -o $@ $(MONOLIB_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\monolib_access.o: ../../src/msw/ole/access.cpp
@@ -10501,6 +10511,9 @@ $(OBJS)\coredll_msgdlg.o: ../../src/msw/msgdlg.cpp
 $(OBJS)\coredll_nativdlg.o: ../../src/msw/nativdlg.cpp
 	$(CXX) -c -o $@ $(COREDLL_CXXFLAGS) $(CPPDEPS) $<
 
+$(OBJS)\coredll_nativewin.o: ../../src/msw/nativewin.cpp
+	$(CXX) -c -o $@ $(COREDLL_CXXFLAGS) $(CPPDEPS) $<
+
 $(OBJS)\coredll_access.o: ../../src/msw/ole/access.cpp
 	$(CXX) -c -o $@ $(COREDLL_CXXFLAGS) $(CPPDEPS) $<
 
@@ -11910,6 +11923,9 @@ $(OBJS)\corelib_msgdlg.o: ../../src/msw/msgdlg.cpp
 	$(CXX) -c -o $@ $(CORELIB_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\corelib_nativdlg.o: ../../src/msw/nativdlg.cpp
+	$(CXX) -c -o $@ $(CORELIB_CXXFLAGS) $(CPPDEPS) $<
+
+$(OBJS)\corelib_nativewin.o: ../../src/msw/nativewin.cpp
 	$(CXX) -c -o $@ $(CORELIB_CXXFLAGS) $(CPPDEPS) $<
 
 $(OBJS)\corelib_access.o: ../../src/msw/ole/access.cpp
