@@ -1782,6 +1782,41 @@ SOURCE=..\..\src\msw\nativdlg.cpp
 # End Source File
 # Begin Source File
 
+SOURCE=..\..\src\msw\nativewin.cpp
+
+!IF  "$(CFG)" == "core - Win32 DLL Universal Release"
+
+# PROP Exclude_From_Build 1
+
+!ELSEIF  "$(CFG)" == "core - Win32 DLL Universal Debug"
+
+# PROP Exclude_From_Build 1
+
+!ELSEIF  "$(CFG)" == "core - Win32 DLL Release"
+
+
+!ELSEIF  "$(CFG)" == "core - Win32 DLL Debug"
+
+
+!ELSEIF  "$(CFG)" == "core - Win32 Universal Release"
+
+# PROP Exclude_From_Build 1
+
+!ELSEIF  "$(CFG)" == "core - Win32 Universal Debug"
+
+# PROP Exclude_From_Build 1
+
+!ELSEIF  "$(CFG)" == "core - Win32 Release"
+
+
+!ELSEIF  "$(CFG)" == "core - Win32 Debug"
+
+
+!ENDIF
+
+# End Source File
+# Begin Source File
+
 SOURCE=..\..\src\msw\notebook.cpp
 
 !IF  "$(CFG)" == "core - Win32 DLL Universal Release"
@@ -6053,6 +6088,10 @@ SOURCE=..\..\include\wx\minifram.h
 # Begin Source File
 
 SOURCE=..\..\include\wx\msgdlg.h
+# End Source File
+# Begin Source File
+
+SOURCE=..\..\include\wx\nativewin.h
 # End Source File
 # Begin Source File
 
